==> Bo2z/STM32F411_W25Q64_extLoader/Core/Src/stm32_eval_spi_flash.c <==
#include "stm32_eval_spi_flash.h"

uint8_t sFLASH_SendByte(uint8_t byte)
{
  /*!< Loop while DR register in not emplty */
  //while (SPI_I2S_GetFlagStatus(sFLASH_SPI, SPI_I2S_FLAG_TXE) == RESET);
	while (!LL_SPI_IsActiveFlag_TXE(sFLASH_SPI));

  /*!< Send byte through the SPI1 peripheral */
  LL_SPI_TransmitData8(sFLASH_SPI, byte);

  /*!< Wait to receive a byte */
  //while (SPI_I2S_GetFlagStatus(sFLASH_SPI, SPI_I2S_FLAG_RXNE) == RESET);
  while (!LL_I2S_IsActiveFlag_RXNE(sFLASH_SPI));
  /*!< Return the byte read from the SPI bus */
  //return SPI_I2S_ReceiveData(sFLASH_SPI);
	return LL_SPI_ReceiveData8(sFLASH_SPI);
}

uint16_t sFLASH_SendHalfWord(uint16_t HalfWord)
{
  /*!< Loop while DR register in not emplty */
  //while (SPI_I2S_GetFlagStatus(sFLASH_SPI, SPI_I2S_FLAG_TXE) == RESET);
	while (!LL_SPI_IsActiveFlag_TXE(sFLASH_SPI));
  /*!< Send Half Word through the sFLASH peripheral */
  //SPI_I2S_SendData(sFLASH_SPI, HalfWord);
	LL_SPI_TransmitData16(sFLASH_SPI, HalfWord);
  /*!< Wait to receive a Half Word */
  //while (SPI_I2S_GetFlagStatus(sFLASH_SPI, SPI_I2S_FLAG_RXNE) == RESET);
	while (!LL_I2S_IsActiveFlag_RXNE(sFLASH_SPI));
  /*!< Return the Half Word read from the SPI bus */
  //return SPI_I2S_ReceiveData(sFLASH_SPI);
	return LL_SPI_ReceiveData16(sFLASH_SPI);
}
